add demo 相关的内容，包括cache,elasticsearch,异常信息全局处理，mq,test内容

--- a/demo-study-cache/pom.xml
+++ b/demo-study-cache/pom.xml
@@ -9,13 +9,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demo-study-common</artifactId>
-
+    <artifactId>demo-study-cache</artifactId>
     <dependencies>
         <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-            <version>5.3.2</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
     </dependencies>
 
