--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
         <module>demo-study-service</module>
         <module>demo-study-rpc</module>
         <module>demp-study-data-structure</module>
+        <module>demo-study-mq</module>
+        <module>demo-study-cache</module>
+        <module>demo-study-elasticsearch</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -68,6 +71,11 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.3.4</version>
         </dependency>
     </dependencies>
 
