--- a/demo-study-elasticsearch/pom.xml
+++ b/demo-study-elasticsearch/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>com.demo.study</groupId>
     <artifactId>demo-study-elasticsearch</artifactId>
     <properties>
         <java.version>8</java.version>
@@ -17,6 +17,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.demo.study</groupId>
+            <artifactId>demo-study-domain</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
