--- a/demo-study-mybatis/pom.xml
+++ b/demo-study-mybatis/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demo-study-common</artifactId>
+    <artifactId>demo-study-mybatis</artifactId>
+
 
 </project>
